[package]
name = "mediatek-brom"
version = "0.1.0"
edition = "2021"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
license = "MIT OR Apache-2.0"
description = "Mediatek bootrom protocol implementation"
homepage = "https://github.com/boardswarm/mediatek-brom"
repository = "https://github.com/boardswarm/mediatek-brom"
readme = "README.md"

[dependencies]
thiserror = "2.0"
tokio = { version = "1.41.1", features = [ "io-util"], optional = true }
futures = { version = "0.3", optional = true }

[features]
tokio = ["dep:tokio"]
futures = ["dep:futures"]

[dev-dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.20", features = ["derive"] }
clap-num = "1.2.0"
tokio = { version = "1.41.1", features = ["full"] }
tokio-serial = "5.4.4"

[[example]]
name = "upload_da"
required-features = ["tokio"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
